name:                carma-sms
version:             0.1.0.0
synopsis:            SMS posting for carma
-- description:         
homepage:            http://github.com/mvoidex/carma-sms
license:             BSD3
license-file:        LICENSE
author:              Alexandr `Voidex` Ruchkin
maintainer:          voidex@live.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable carma-sms
  hs-source-dirs: src
  main-is: carma-sms.hs
  -- other-modules:
  build-depends:
    base           == 4.5.*,
    smsdirect      == 0.1.*,
    redis-worker   == 0.1.*,
    simple-log     >= 0.1.2 && < 0.2,
    text == 0.11.*,
    containers == 0.4.*,
    bytestring == 0.9.*,
    mtl >= 2.0 && < 2.2,
    hedis == 0.4.*
