name:                carma-sms
version:             0.2.1.0
synopsis:            SMS posting for carma
-- description:         
homepage:            http://github.com/mvoidex/carma-sms
license:             BSD3
license-file:        LICENSE
author:              Alexandr `Voidex` Ruchkin
maintainer:          voidex@live.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

executable carma-sms
  hs-source-dirs: src
  main-is: carma-sms.hs
  other-modules:
    CarmaSMS.Action
    CarmaSMS.Process
  build-depends:
    base           == 4.5.*,
    smsdirect      >= 0.1.1 && < 0.2,
    redis-worker   == 0.2.*,
    simple-log     >= 0.1.5 && < 0.2,
    text == 0.11.*,
    containers == 0.4.*,
    bytestring == 0.9.*,
    mtl >= 2.0 && < 2.2,
    hedis == 0.6.*,
    transformers == 0.2.*,
    MonadCatchIO-transformers == 0.3.*,
    time == 1.4.*

  ghc-options: -Wall
